Developer/src/objects/SFDC_Referring_Employee__c.object
<CustomObject>
    <description>応募者を紹介した社員</description>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>電子メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>社員 ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone_Number__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Start_Date__c</fullName>
        <label>入社日</label>
        <type>Date</type>
    </fields>
    <label>紹介社員</label>
    <listViews>
        <fullName>View</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>紹介者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>